--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,7 @@ test {
 
 sourceCompatibility = '17'
 targetCompatibility = '17'
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:unchecked"
+}
